--- a/src/main/resources/org/example/demo2/batanes.fxml
+++ b/src/main/resources/org/example/demo2/batanes.fxml
@@ -31,8 +31,8 @@
                         <Font name="Arial" size="18.0" />
                     </font>
                 </Label>
-                <TextField fx:id="usernameField" layoutX="36.0" layoutY="151.0" prefHeight="38.0" prefWidth="259.0" promptText="TRAVELERS NAME" />
-                <DatePicker layoutX="34.0" layoutY="251.0" prefHeight="38.0" prefWidth="259.0" promptText="DURATION" />
+                <TextField fx:id="usernameField" layoutX="36.0" layoutY="151.0" prefHeight="38.0" prefWidth="259.0" promptText="TRAVELER'S NAME" />
+                <DatePicker fx:id="durationField" layoutX="34.0" layoutY="251.0" prefHeight="38.0" prefWidth="259.0" promptText="DURATION" />
 
                 <!-- Accordion for Hotels -->
                 <Accordion layoutX="33.0" layoutY="203.0" />
@@ -41,7 +41,7 @@
                         <Font name="System Bold" size="19.0" />
                     </font>
                 </Label>
-                <Button fx:id="printPdfButton" layoutX="123.0" layoutY="579.0" mnemonicParsing="false" prefHeight="38.0" prefWidth="181.0" style="-fx-background-color: MIDNIGHTBLUE; -fx-background-radius: 25;" text="PRINT PDF" textFill="WHITE" >
+                <Button fx:id="printPdfButton" layoutX="123.0" layoutY="579.0" mnemonicParsing="false" prefHeight="38.0" prefWidth="181.0" style="-fx-background-color: MIDNIGHTBLUE; -fx-background-radius: 25;" text="PRINT PDF" textFill="WHITE" onAction="#handlePrintPdfButton">
                     <font>
                         <Font name="System Bold" size="13.0" />
                     </font>
@@ -50,11 +50,11 @@
                     </cursor>
                 </Button>
                 <ComboBox fx:id="hotelComboBox" layoutX="34.0" layoutY="203.0" prefHeight="34.0" prefWidth="259.0" promptText="HOTEL"  style="-fx-font-weight: bold;"/>
-            <ComboBox fx:id="topattractionComboBox" layoutX="34.0" layoutY="305.0" prefHeight="34.0" prefWidth="259.0" promptText="TOP ATTRACTION"  style="-fx-font-weight: bold;"/>
-            <ComboBox fx:id="activitiesComboBox" layoutX="34.0" layoutY="360.0" prefHeight="34.0" prefWidth="259.0" promptText="ACTIVITIES WITH TIME" style="-fx-font-weight: bold;" />
-            <ComboBox fx:id="breakfastComboBox" layoutX="68.0" layoutY="443.0" prefHeight="34.0" prefWidth="259.0" promptText="BREAKFAST" style="-fx-font-weight: bold;" />
-            <ComboBox fx:id="lunchComboBox" layoutX="68.0" layoutY="492.0" prefHeight="34.0" prefWidth="259.0" promptText="LUNCH"  style="-fx-font-weight: bold;"/>
-            <ComboBox fx:id="dinnerComboBox" layoutX="68.0" layoutY="537.0" prefHeight="34.0" prefWidth="259.0" promptText="DINNER"  style="-fx-font-weight: bold;"/>
+                <ComboBox fx:id="topattractionComboBox" layoutX="34.0" layoutY="305.0" prefHeight="34.0" prefWidth="259.0" promptText="TOP ATTRACTION"  style="-fx-font-weight: bold;"/>
+                <ComboBox fx:id="activitiesComboBox" layoutX="34.0" layoutY="360.0" prefHeight="34.0" prefWidth="259.0" promptText="ACTIVITIES WITH TIME" style="-fx-font-weight: bold;" />
+                <ComboBox fx:id="breakfastComboBox" layoutX="68.0" layoutY="443.0" prefHeight="34.0" prefWidth="259.0" promptText="BREAKFAST" style="-fx-font-weight: bold;" />
+                <ComboBox fx:id="lunchComboBox" layoutX="68.0" layoutY="492.0" prefHeight="34.0" prefWidth="259.0" promptText="LUNCH"  style="-fx-font-weight: bold;"/>
+                <ComboBox fx:id="dinnerComboBox" layoutX="68.0" layoutY="537.0" prefHeight="34.0" prefWidth="259.0" promptText="DINNER"  style="-fx-font-weight: bold;"/>
             </children>
         </AnchorPane>
         <AnchorPane layoutX="469.0" prefHeight="646.0" prefWidth="542.0" style="-fx-background-color: midnightblue;">
