--- a/src/main/resources/org/example/demo2/destination.fxml
+++ b/src/main/resources/org/example/demo2/destination.fxml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.Cursor?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
 <AnchorPane prefHeight="644.0" prefWidth="1011.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.demo2.destination">
    <children>
@@ -91,8 +93,7 @@
                   <Cursor fx:constant="HAND" />
                </cursor>
             </ImageView>
-
-
+            
 
             <ImageView fx:id="zambalesImage" fitHeight="224.0" fitWidth="226.0" layoutX="757.0" layoutY="334.0" onMouseClicked="#handleZambalesClick" onMouseEntered="#hoverEnter" onMouseExited="#hoverExit" pickOnBounds="true" preserveRatio="true">
                <image>
@@ -102,6 +103,14 @@
                   <Cursor fx:constant="HAND" />
                </cursor>
             </ImageView>
+            <Button layoutX="760.0" layoutY="566.0" mnemonicParsing="false" prefHeight="55.0" prefWidth="195.0" style="-fx-background-color: MIDNIGHTBLUE; -fx-background-radius: 25;" text="PRINT PDF" textFill="WHITE">
+               <font>
+                  <Font name="System Bold" size="13.0" />
+               </font>
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+            </Button>
          </children>
       </AnchorPane>
    </children>
