--- a/src/main/resources/org/example/demo2/login.fxml
+++ b/src/main/resources/org/example/demo2/login.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="644.0" prefWidth="1011.0" style="-fx-background-color: NAVAJOWHITE;" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.demo2.SecondPageController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="644.0" prefWidth="1011.0" style="-fx-background-color: NAVAJOWHITE;" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.demo2.LoginController">
    <children>
       <TextField fx:id="usernameField" layoutX="67.0" layoutY="210.0" prefHeight="38.0" prefWidth="259.0" promptText="USERNAME" />
       <PasswordField fx:id="passwordField" layoutX="67.0" layoutY="266.0" prefHeight="38.0" prefWidth="259.0" promptText="PASSWORD" />
