--- a/src/main/resources/org/example/demo2/sign-up.fxml
+++ b/src/main/resources/org/example/demo2/sign-up.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="644.0" prefWidth="1011.0" style="-fx-background-color: NAVAJOWHITE;" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.demo2.HelloController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="644.0" prefWidth="1011.0" style="-fx-background-color: NAVAJOWHITE;" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.demo2.SignupController">
    <children>
       <TextField fx:id="usernameField" layoutX="57.0" layoutY="232.0" prefHeight="38.0" prefWidth="259.0" promptText="USERNAME" />
       <Label layoutX="56.0" layoutY="143.0" text="Create an account">
