--- a/src/main/resources/org/example/demo2/palawan-test.fxml
+++ b/src/main/resources/org/example/demo2/palawan-test.fxml
@@ -6,23 +6,32 @@
 <?import javafx.scene.media.*?>
 
 <AnchorPane xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/17.0.2-ea" fx:controller="org.example.demo2.PalawanTest">
-    <!-- Other UI components -->
-
     <DatePicker fx:id="arrivalDatePicker" layoutX="150" layoutY="50" onAction="#handleArrivalTimeChanged" />
     <TextField fx:id="arrivalTimeField" layoutX="350" layoutY="50" onKeyReleased="#handleArrivalTimeChanged" />
     <Button fx:id="addArrivalButton" layoutX="550" layoutY="50" onAction="#handleAddArrivalActivity" text="Add Arrival Activity" />
-    <TableView fx:id="activitiesTable" editable="true" layoutX="150" layoutY="100" prefHeight="200" prefWidth="500">
+
+    <!-- Chosen Activities Table -->
+    <TableView fx:id="chosenActivitiesTable" editable="true" layoutX="150" layoutY="100" prefHeight="200" prefWidth="500">
         <columns>
-            <TableColumn fx:id="activityColumn" prefWidth="250.0" text="Activity" />
-            <TableColumn fx:id="timeColumn" minWidth="0.0" prefWidth="249.0" text="Time" />
+            <TableColumn fx:id="chosenActivityColumn" prefWidth="250.0" text="Activity" />
+            <TableColumn fx:id="chosenTimeColumn" minWidth="0.0" prefWidth="249.0" text="Time" />
         </columns>
     </TableView>
-    <TextField fx:id="customActivityField" layoutX="150" layoutY="320" />
-    <TextField fx:id="customTimeField" layoutX="350" layoutY="320" />
-    <Button layoutX="550" layoutY="320" onAction="#handleAddCustomActivity" text="Add Custom Activity" />
+    <Button layoutX="670" layoutY="100" onAction="#handleRemoveChosenActivity" text="Remove Selected Activity" />
 
-    <MediaView fx:id="mediaView" fitHeight="450" fitWidth="800" layoutX="100" layoutY="400" />
+    <!-- Predefined Activities Table -->
+    <TableView fx:id="predefinedActivitiesTable" editable="false" layoutX="150" layoutY="320" prefHeight="150" prefWidth="500">
+        <columns>
+            <TableColumn fx:id="predefinedActivityColumn" prefWidth="250.0" text="Predefined Activities" />
+        </columns>
+    </TableView>
+    <Button layoutX="670" layoutY="320" onAction="#handleAddPredefinedActivity" text="Add Selected Activity" />
 
+    <TextField fx:id="customActivityField" layoutX="150" layoutY="480" />
+    <TextField fx:id="customTimeField" layoutX="350" layoutY="480" />
+    <Button layoutX="550" layoutY="480" onAction="#handleAddCustomActivity" text="Add Custom Activity" />
+
+    <MediaView fx:id="mediaView" fitHeight="450" fitWidth="800" layoutX="100" layoutY="520" />
     <ImageView fx:id="backButton" fitHeight="50" fitWidth="50" layoutX="20" layoutY="20" />
 
     <Button layoutX="650" layoutY="350" onAction="#saveToDatabase" text="Save to Database" />
