--- a/src/main/resources/org/example/demo2/palawan-test.fxml
+++ b/src/main/resources/org/example/demo2/palawan-test.fxml
@@ -1,41 +1,71 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.media.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.DatePicker?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.media.MediaView?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/17.0.2-ea" fx:controller="org.example.demo2.PalawanTest">
-    <DatePicker fx:id="arrivalDatePicker" layoutX="150" layoutY="50" onAction="#handleArrivalTimeChanged" />
-    <TextField fx:id="arrivalTimeField" layoutX="350" layoutY="50" onKeyReleased="#handleArrivalTimeChanged" />
-    <Button fx:id="addArrivalButton" layoutX="550" layoutY="50" onAction="#handleAddArrivalActivity" text="Add Arrival Activity" />
+<AnchorPane prefHeight="1102.0" prefWidth="975.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.demo2.PalawanTest">
+    <!-- Arrival Section -->
+    <DatePicker fx:id="arrivalDatePicker" layoutX="45.0" layoutY="50.0" onAction="#handleArrivalTimeChanged" />
+    <TextField fx:id="arrivalTimeField" layoutX="237.0" layoutY="50.0" onKeyReleased="#handleArrivalTimeChanged" />
+    <Button fx:id="addArrivalButton" layoutX="430.0" layoutY="50.0" onAction="#handleAddArrivalActivity" text="Add Arrival Activity" />
 
     <!-- Chosen Activities Table -->
-    <TableView fx:id="chosenActivitiesTable" editable="true" layoutX="150" layoutY="100" prefHeight="200" prefWidth="500">
+    <TableView fx:id="chosenActivitiesTable" editable="true" layoutX="46.0" layoutY="100.0" prefHeight="200" prefWidth="479.0">
         <columns>
-            <TableColumn fx:id="chosenActivityColumn" prefWidth="250.0" text="Activity" />
-            <TableColumn fx:id="chosenTimeColumn" minWidth="0.0" prefWidth="249.0" text="Time" />
+            <TableColumn fx:id="chosenActivityColumn" prefWidth="295.2453308105469" text="Activity" />
+            <TableColumn fx:id="chosenTimeColumn" minWidth="0.0" prefWidth="204.67919921875" text="Time" />
         </columns>
     </TableView>
-    <Button layoutX="670" layoutY="100" onAction="#handleRemoveChosenActivity" text="Remove Selected Activity" />
+    <Button layoutX="576.0" layoutY="251.0" onAction="#handleRemoveChosenActivity" prefHeight="25.0" prefWidth="147.0" text="Remove Selected Activity" />
 
     <!-- Predefined Activities Table -->
-    <TableView fx:id="predefinedActivitiesTable" editable="false" layoutX="150" layoutY="320" prefHeight="150" prefWidth="500">
+    <TableView fx:id="predefinedActivitiesTable" editable="false" layoutX="46.0" layoutY="320.0" prefHeight="150" prefWidth="479.0">
         <columns>
             <TableColumn fx:id="predefinedActivityColumn" prefWidth="250.0" text="Predefined Activities" />
         </columns>
     </TableView>
-    <Button layoutX="670" layoutY="320" onAction="#handleAddPredefinedActivity" text="Add Selected Activity" />
+    <Button layoutX="576.0" layoutY="211.0" onAction="#handleAddPredefinedActivity" prefHeight="25.0" prefWidth="147.0" text="Add Selected Activity" />
 
-    <TextField fx:id="customActivityField" layoutX="150" layoutY="480" />
-    <TextField fx:id="customTimeField" layoutX="350" layoutY="480" />
+    <!-- Custom Activity Section -->
+    <TextField fx:id="customActivityField" layoutX="46.0" layoutY="480.0" prefHeight="25.0" prefWidth="226.0" promptText="Custom Activities" />
+    <TextField fx:id="customTimeField" layoutX="299.0" layoutY="480.0" prefHeight="25.0" prefWidth="226.0" promptText="Time" />
     <Button layoutX="550" layoutY="480" onAction="#handleAddCustomActivity" text="Add Custom Activity" />
 
-    <MediaView fx:id="mediaView" fitHeight="450" fitWidth="800" layoutX="100" layoutY="520" />
+    <!-- Media and Navigation -->
+    <MediaView fx:id="mediaView" fitHeight="450" fitWidth="800" layoutX="352.0" layoutY="889.0" />
     <ImageView fx:id="backButton" fitHeight="50" fitWidth="50" layoutX="20" layoutY="20" />
 
-    <Button layoutX="650" layoutY="350" onAction="#saveToDatabase" text="Save to Database" />
-    <Button fx:id="resetButton" layoutX="650" layoutY="410" onAction="#resetFields" text="Reset Fields" />
+    <Button layoutX="575.0" layoutY="300.0" onAction="#saveToDatabase" prefHeight="25.0" prefWidth="149.0" text="Save to Database" />
+    <Button fx:id="resetButton" layoutX="576.0" layoutY="342.0" onAction="#resetFields" prefHeight="25.0" prefWidth="149.0" text="Reset Fields" />
 
-    <TextField fx:id="usernameField" layoutX="700" layoutY="20" promptText="Username" />
+    <!-- Username Field -->
+    <TextField fx:id="usernameField" layoutX="45.0" layoutY="14.0" prefHeight="25.0" prefWidth="172.0" promptText="Username" />
+
+    <!-- Meals Section -->
+    <Text layoutX="46.0" layoutY="543.0" strokeType="OUTSIDE" strokeWidth="0.0" text=" MEALS" wrappingWidth="115.92453247374533">
+        <font>
+            <Font size="20.0" />
+        </font>
+    </Text>
+    <TableView fx:id="mealsTable" editable="false" layoutX="46.0" layoutY="564.0" prefHeight="150" prefWidth="479.0">
+        <columns>
+            <TableColumn fx:id="mealsColumn" prefWidth="478.1886981422265" text="Meals" />
+        </columns>
+    </TableView>
+    <Button layoutX="559.0" layoutY="600.0" onAction="#handleAddMealActivity" prefHeight="25.0" prefWidth="180.0" text="Add Selected Activity" />
+
+
+    <Button layoutX="533.0" layoutY="787.0" mnemonicParsing="false" onAction="#handleAddCustomActivity1" text="Button" />
+   <TextField fx:id="customActivityField1" layoutX="48.0" layoutY="787.0" prefHeight="25.0" prefWidth="226.0" promptText="Custom Activities" />
+
+
+
 </AnchorPane>
