--- a/src/main/resources/org/example/demo2/palawan-test.fxml
+++ b/src/main/resources/org/example/demo2/palawan-test.fxml
@@ -13,14 +13,14 @@
 <?import javafx.scene.media.MediaView?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="894.0" prefWidth="1085.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.demo2.PalawanTest">
+<AnchorPane prefHeight="817.0" prefWidth="1085.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.demo2.PalawanTest">
 
     <!-- Media and Navigation -->
-    <MediaView fx:id="mediaView" fitHeight="888.0" fitWidth="527.0" layoutX="581.0" layoutY="4.0">
+    <MediaView fx:id="mediaView" fitHeight="810.0" fitWidth="527.0" layoutX="595.0" layoutY="3.0">
       <viewport>
-         <Rectangle2D height="888.0" width="527.0" />
+         <Rectangle2D height="820.0" width="527.0" />
       </viewport></MediaView>
-   <AnchorPane layoutY="1.0" prefHeight="892.0" prefWidth="581.0" style="-fx-background-color: NAVAJOWHITE;">
+   <AnchorPane layoutY="1.0" prefHeight="813.0" prefWidth="595.0" style="-fx-background-color: NAVAJOWHITE;">
       <children>
       
                       <!-- Username Field -->
@@ -39,22 +39,22 @@
           </TableView>
       
           <!-- Predefined Activities Table -->
-          <TableView fx:id="predefinedActivitiesTable" editable="false" layoutX="38.0" layoutY="322.0" prefHeight="192.0" prefWidth="537.0">
+          <TableView fx:id="predefinedActivitiesTable" editable="false" layoutX="38.0" layoutY="322.0" prefHeight="192.0" prefWidth="363.0">
               <columns>
                   <TableColumn fx:id="predefinedActivityColumn" prefWidth="250.0" text="Predefined Activities" />
               </columns>
           </TableView>
-          <Button layoutX="231.0" layoutY="564.0" onAction="#handleRemoveChosenActivity" prefHeight="35.0" prefWidth="192.0" style="-fx-background-radius: 60px; -fx-background-color: midnightblue;" text="Remove Selected Activity" textFill="WHITE">
+          <Button layoutX="414.0" layoutY="374.0" onAction="#handleRemoveChosenActivity" prefHeight="35.0" prefWidth="158.0" style="-fx-background-radius: 60px; -fx-background-color: midnightblue;" text="Remove Selected Activity" textFill="WHITE">
             <font>
-               <Font name="Arial Black" size="12.0" />
+               <Font name="Arial Black" size="10.0" />
             </font>
             <cursor>
                <Cursor fx:constant="HAND" />
             </cursor>
          </Button>
-          <Button layoutX="38.0" layoutY="564.0" onAction="#handleAddPredefinedActivity" prefHeight="35.0" prefWidth="180.0" style="-fx-background-radius: 60px; -fx-background-color: midnightblue;" text="Add Selected Activity" textFill="WHITE">
+          <Button layoutX="414.0" layoutY="329.0" onAction="#handleAddPredefinedActivity" prefHeight="35.0" prefWidth="134.0" style="-fx-background-radius: 60px; -fx-background-color: midnightblue;" text="Add Selected Activity" textFill="WHITE">
             <font>
-               <Font name="Arial Black" size="13.0" />
+               <Font name="Arial Black" size="10.0" />
             </font>
             <cursor>
                <Cursor fx:constant="HAND" />
@@ -62,9 +62,9 @@
          </Button>
       
           <!-- Custom Activity Section -->
-          <TextField fx:id="customActivityField" layoutX="38.0" layoutY="521.0" prefHeight="35.0" prefWidth="180.0" promptText="Custom Activities" />
-          <TextField fx:id="customTimeField" layoutX="231.0" layoutY="521.0" prefHeight="35.0" prefWidth="180.0" promptText="Time" />
-          <Button layoutX="435.0" layoutY="521.0" onAction="#handleAddCustomActivity" prefHeight="43.0" prefWidth="116.0" style="-fx-background-color: midnightblue; -fx-background-radius: 60px;" text="Add Custom Activity" textFill="WHITE">
+          <TextField fx:id="customActivityField" layoutX="37.0" layoutY="521.0" prefHeight="35.0" prefWidth="172.0" promptText="Custom Activities" />
+          <TextField fx:id="customTimeField" layoutX="231.0" layoutY="521.0" prefHeight="35.0" prefWidth="172.0" promptText="Time" />
+          <Button layoutX="433.0" layoutY="521.0" onAction="#handleAddCustomActivity" prefHeight="35.0" prefWidth="117.0" style="-fx-background-color: midnightblue; -fx-background-radius: 60px;" text="Add Custom Activity" textFill="WHITE">
             <cursor>
                <Cursor fx:constant="HAND" />
             </cursor>
@@ -73,7 +73,7 @@
             </font>
          </Button>
       
-          <Button layoutX="231.0" layoutY="606.0" onAction="#saveToDatabase" prefHeight="35.0" prefWidth="192.0" style="-fx-background-radius: 60px; -fx-background-color: midnightblue;" text="Save to Database" textFill="WHITE">
+          <Button layoutX="433.0" layoutY="770.0" onAction="#saveToDatabase" prefHeight="35.0" prefWidth="147.0" style="-fx-background-radius: 60px; -fx-background-color: midnightblue;" text="Save to Database" textFill="WHITE">
             <font>
                <Font name="Arial Black" size="13.0" />
             </font>
@@ -81,7 +81,7 @@
                <Cursor fx:constant="HAND" />
             </cursor>
          </Button>
-          <Button fx:id="resetButton" layoutX="38.0" layoutY="606.0" onAction="#resetFields" prefHeight="35.0" prefWidth="180.0" style="-fx-background-radius: 60px; -fx-background-color: midnightblue;" text="Reset Fields" textFill="WHITE">
+          <Button fx:id="resetButton" layoutX="273.0" layoutY="770.0" onAction="#resetFields" prefHeight="35.0" prefWidth="147.0" style="-fx-background-radius: 60px; -fx-background-color: midnightblue;" text="Reset Fields" textFill="WHITE">
             <font>
                <Font name="Arial Black" size="13.0" />
             </font>
@@ -89,12 +89,12 @@
                <Cursor fx:constant="HAND" />
             </cursor>
          </Button>
-          <TableView fx:id="mealsTable" editable="false" layoutX="38.0" layoutY="648.0" prefHeight="150" prefWidth="537.0">
+          <TableView fx:id="mealsTable" editable="false" layoutX="38.0" layoutY="566.0" prefHeight="150" prefWidth="363.0">
               <columns>
                   <TableColumn fx:id="mealsColumn" prefWidth="536.150975823191" text="Meals" />
               </columns>
           </TableView>
-          <Button layoutX="37.0" layoutY="849.0" onAction="#handleAddMealActivity" prefHeight="35.0" prefWidth="180.0" style="-fx-background-color: midnightblue; -fx-background-radius: 60px;" text="Add Selected Activity" textFill="WHITE">
+          <Button layoutX="416.0" layoutY="623.0" onAction="#handleAddMealActivity" prefHeight="35.0" prefWidth="180.0" style="-fx-background-color: midnightblue; -fx-background-radius: 60px;" text="Add Food" textFill="WHITE">
             <font>
                <Font name="System Bold" size="13.0" />
             </font>
@@ -104,7 +104,7 @@
          </Button>
       
       
-          <Button layoutX="290.0" layoutY="812.0" mnemonicParsing="false" onAction="#handleAddCustomActivity1" prefHeight="25.0" prefWidth="148.0" style="-fx-background-color: midnightblue; -fx-background-radius: 60px;" text="Add Custom Activity" textFill="WHITE">
+          <Button layoutX="273.0" layoutY="731.0" mnemonicParsing="false" onAction="#handleAddCustomActivity1" prefHeight="25.0" prefWidth="148.0" style="-fx-background-color: midnightblue; -fx-background-radius: 60px;" text="Add Custom Food" textFill="WHITE">
             <cursor>
                <Cursor fx:constant="HAND" />
             </cursor>
@@ -112,7 +112,7 @@
                <Font name="System Bold" size="11.773585319519043" />
             </font>
          </Button>
-         <TextField fx:id="customActivityField1" layoutX="39.0" layoutY="807.0" prefHeight="35.0" prefWidth="226.0" promptText="Custom food" />
+         <TextField fx:id="customActivityField1" layoutX="39.0" layoutY="726.0" prefHeight="35.0" prefWidth="226.0" promptText="Custom food" />
 
 
          <ImageView fx:id="backButton" fitHeight="22.0" fitWidth="98.0" layoutX="-1.0" layoutY="3.0" pickOnBounds="true" preserveRatio="true">
