--- a/src/main/resources/org/example/demo2/palawan-test.fxml
+++ b/src/main/resources/org/example/demo2/palawan-test.fxml
@@ -1,19 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Rectangle2D?>
-<?import javafx.scene.Cursor?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.DatePicker?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.media.MediaView?>
-<?import javafx.scene.text.Font?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.media.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="817.0" prefWidth="1085.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.demo2.PalawanTest">
+<AnchorPane prefHeight="817.0" prefWidth="1085.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.demo2.PalawanTest">
 
     <!-- Media and Navigation -->
     <MediaView fx:id="mediaView" fitHeight="810.0" fitWidth="527.0" layoutX="595.0" layoutY="3.0">
@@ -103,7 +98,6 @@
                 </cursor>
             </Button>
 
-
             <Button layoutX="273.0" layoutY="731.0" mnemonicParsing="false" onAction="#handleAddCustomActivity1" prefHeight="25.0" prefWidth="148.0" style="-fx-background-color: midnightblue; -fx-background-radius: 60px;" text="Add Custom Food" textFill="WHITE">
                 <cursor>
                     <Cursor fx:constant="HAND" />
@@ -114,7 +108,7 @@
             </Button>
             <TextField fx:id="customActivityField1" layoutX="39.0" layoutY="726.0" prefHeight="35.0" prefWidth="226.0" promptText="Custom food" />
 
-
+            <!-- Back Button -->
             <ImageView fx:id="backButton" fitHeight="22.0" fitWidth="98.0" layoutX="-1.0" layoutY="3.0" pickOnBounds="true" preserveRatio="true">
                 <image>
                     <Image url="@../../../images/backspace1.png" />
@@ -123,11 +117,10 @@
                     <Cursor fx:constant="HAND" />
                 </cursor>
             </ImageView>
+
+            <!-- Hotel ComboBox -->
+            <ComboBox fx:id="hotelComboBox" layoutX="376.0" layoutY="24.0" prefWidth="150.0" />
         </children>
     </AnchorPane>
-
-
-
-
 
 </AnchorPane>
