--- a/src/main/resources/org/example/demo2/login.fxml
+++ b/src/main/resources/org/example/demo2/login.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Hyperlink?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
@@ -16,7 +17,9 @@
    <children>
       <TextField fx:id="usernameField" layoutX="67.0" layoutY="210.0" prefHeight="38.0" prefWidth="259.0" promptText="USERNAME" />
       <PasswordField fx:id="passwordField" layoutX="67.0" layoutY="266.0" prefHeight="38.0" prefWidth="259.0" promptText="PASSWORD" />
-      <Button fx:id="loginButton" layoutX="67.0" layoutY="322.0" mnemonicParsing="false" onAction="#handleLoginButtonClick" prefHeight="44.0" prefWidth="259.0" style="-fx-background-color: midnightblue; -fx-background-radius: 25;" text="Log in" textFill="WHITE">
+      <TextField fx:id="passwordTextField" layoutX="67.0" layoutY="266.0" prefHeight="38.0" prefWidth="259.0" promptText="PASSWORD" visible="false" />
+      <CheckBox fx:id="showPasswordCheckBox" layoutX="71.0" layoutY="313.0" onAction="#togglePasswordVisibility" text="Show Password" />
+      <Button fx:id="loginButton" layoutX="67.0" layoutY="340.0" mnemonicParsing="false" onAction="#handleLoginButtonClick" prefHeight="44.0" prefWidth="259.0" style="-fx-background-color: midnightblue; -fx-background-radius: 25;" text="Log in" textFill="WHITE">
          <font>
             <Font size="22.0" />
          </font>
@@ -24,8 +27,8 @@
             <Cursor fx:constant="HAND" />
          </cursor>
       </Button>
-      <Label layoutX="122.0" layoutY="384.0" prefHeight="18.0" prefWidth="115.0" text="Need account?" />
-      <Hyperlink layoutX="199.0" layoutY="381.0" onMouseClicked="#handleloginLabelClick" prefHeight="24.0" prefWidth="60.0" text="Sign-up" />
+      <Label layoutX="122.0" layoutY="396.0" prefHeight="18.0" prefWidth="115.0" text="Need account?" />
+      <Hyperlink layoutX="199.0" layoutY="393.0" onMouseClicked="#handleloginLabelClick" prefHeight="24.0" prefWidth="60.0" text="Sign-up" />
       <Label layoutX="67.0" layoutY="125.0" text="Log in your account">
          <font>
             <Font name="Arial Black" size="30.0" />
@@ -44,7 +47,8 @@
                   <Image url="@../../../images/ph.png" />
                </image>
             </ImageView>
-         </children></AnchorPane>
+         </children>
+      </AnchorPane>
       <ImageView fitHeight="98.0" fitWidth="106.0" layoutX="24.0" layoutY="24.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../../../images/logo.png" />
