--- a/src/main/resources/org/example/demo2/sign-up.fxml
+++ b/src/main/resources/org/example/demo2/sign-up.fxml
@@ -27,7 +27,7 @@
          </font>
       </Label>
       <Label layoutX="104.0" layoutY="513.0" text="Already have an account?" />
-      <Hyperlink layoutX="248.0" onMouseClicked="#handleloginLabelClick" layoutY="510.0" text="Log in" />
+      <Hyperlink layoutX="237.0" layoutY="510.0" onMouseClicked="#handleloginLabelClick" text="Log in" />
       <Button fx:id="signupButton" layoutX="57.0" layoutY="454.0" mnemonicParsing="false" onAction="#handleSignupButtonClick" prefHeight="44.0" prefWidth="259.0" style="-fx-background-color: midnightblue; -fx-background-radius: 25;" text="Sign up" textFill="WHITE">
          <font>
             <Font size="22.0" />
@@ -40,11 +40,11 @@
       <TextField fx:id="passwordTextField" layoutX="58.0" layoutY="386.0" prefHeight="38.0" prefWidth="259.0" promptText="RE-ENTER PASSWORD" visible="false" />
       <PasswordField fx:id="signupPasswordField" layoutX="58.0" layoutY="335.0" prefHeight="38.0" prefWidth="259.0" promptText="PASSWORD" />
       <TextField fx:id="signupPasswordTextField" layoutX="58.0" layoutY="335.0" prefHeight="38.0" prefWidth="259.0" promptText="PASSWORD" visible="false" />
-      <CheckBox fx:id="showPasswordCheckBox" layoutX="58.0" layoutY="430.0" text="Show Password" onAction="#togglePasswordVisibility" />
+      <CheckBox fx:id="showPasswordCheckBox" layoutX="58.0" layoutY="430.0" onAction="#togglePasswordVisibility" text="Show Password" />
       <Separator layoutX="407.0" layoutY="-9.0" orientation="VERTICAL" prefHeight="658.0" prefWidth="15.0" />
       <AnchorPane layoutX="415.0" layoutY="-6.0" prefHeight="658.0" prefWidth="605.0" style="-fx-background-color: MIDNIGHTBLUE;">
          <children>
-            <ImageView fitHeight="419.0" fitWidth="628.0" layoutX="-1.0" layoutY="126.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="436.0" fitWidth="618.0" layoutY="119.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../../../images/ph.png" />
                </image>
